--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
  <nav class="navbar container-width">
     <!-- Left: Logo -->
-    <div class="logo"><img src="B12A02-Responsive-Flowers/assets/logo.png" alt=""></div>
+    <div class="logo"><img src="assets/logo.png" alt=""></div>
 
     <!-- Right: Menu Items + Cart -->
     <div class="nav-items">
@@ -58,7 +58,7 @@
 
    
     <div class="banner-image">
-      <img src="B12A02-Responsive-Flowers/assets/hero-flower.png" alt="Banner Image" />
+      <img src="assets/hero-flower.png" alt="Banner Image" />
     </div>
   </section>
 
@@ -122,7 +122,7 @@
       <!-- Card 1 -->
       <div class="plant-card">
         <div class="plant-image">
-          <img src="B12A02-Responsive-Flowers/assets//sample-flower-image.png" alt="Plant 1">
+          <img src="assets//sample-flower-image.png" alt="Plant 1">
         </div>
         <div class="plant-content">
           <div class="plant-name">Lily Blossom</div>
@@ -133,19 +133,7 @@
 
       <div class="plant-card">
         <div class="plant-image">
-          <img src="B12A02-Responsive-Flowers/assets//sample-flower-image.png" alt="Plant 1">
-        </div>
-        <div class="plant-content">
-          <div class="plant-name">Lily Blossom</div>
-          <div class="plant-price">20 USD</div>
-          <button class="add-button">Add to Cart</button>
-        </div>
-      </div>
-
-
-      <div class="plant-card">
-        <div class="plant-image">
-          <img src="./B12A02-Responsive-Flowers/assets//sample-flower-image.png" alt="Plant 1">
+          <img src="assets//sample-flower-image.png" alt="Plant 1">
         </div>
         <div class="plant-content">
           <div class="plant-name">Lily Blossom</div>
@@ -157,7 +145,7 @@
 
       <div class="plant-card">
         <div class="plant-image">
-          <img src="./B12A02-Responsive-Flowers/assets//sample-flower-image.png" alt="Plant 1">
+          <img src="assets//sample-flower-image.png" alt="Plant 1">
         </div>
         <div class="plant-content">
           <div class="plant-name">Lily Blossom</div>
@@ -169,7 +157,19 @@
 
       <div class="plant-card">
         <div class="plant-image">
-          <img src="./B12A02-Responsive-Flowers/assets//sample-flower-image.png" alt="Plant 1">
+          <img src="assets//sample-flower-image.png" alt="Plant 1">
+        </div>
+        <div class="plant-content">
+          <div class="plant-name">Lily Blossom</div>
+          <div class="plant-price">20 USD</div>
+          <button class="add-button">Add to Cart</button>
+        </div>
+      </div>
+
+
+      <div class="plant-card">
+        <div class="plant-image">
+          <img src="assets//sample-flower-image.png" alt="Plant 1">
         </div>
         <div class="plant-content">
           <div class="plant-name">Lily Blossom</div>
@@ -180,7 +180,7 @@
 
       <div class="plant-card">
         <div class="plant-image">
-          <img src="./B12A02-Responsive-Flowers/assets//sample-flower-image.png" alt="Plant 1">
+          <img src="assets//sample-flower-image.png" alt="Plant 1">
         </div>
         <div class="plant-content">
           <div class="plant-name">Lily Blossom</div>
@@ -191,7 +191,7 @@
 
       <div class="plant-card">
         <div class="plant-image">
-          <img src="./B12A02-Responsive-Flowers/assets//sample-flower-image.png" alt="Plant 1">
+          <img src="assets//sample-flower-image.png" alt="Plant 1">
         </div>
         <div class="plant-content">
           <div class="plant-name">Lily Blossom</div>
@@ -202,7 +202,7 @@
 
       <div class="plant-card">
         <div class="plant-image">
-          <img src="./B12A02-Responsive-Flowers/assets//sample-flower-image.png" alt="Plant 1">
+          <img src="assets//sample-flower-image.png" alt="Plant 1">
         </div>
         <div class="plant-content">
           <div class="plant-name">Lily Blossom</div>
@@ -272,8 +272,8 @@
 
 
     <section class="section-h list-g  container-width">
-        <div class="img-contain"> <img class="story" src="./B12A02-Responsive-Flowers/assets/flower-store.png" alt="">
-        <img class="badge" src="./B12A02-Responsive-Flowers/assets/trusted-badge.png" alt="">
+        <div class="img-contain"> <img class="story" src="assets/flower-store.png" alt="">
+        <img class="badge" src="assets/trusted-badge.png" alt="">
     </div>
 
         <div>
@@ -419,7 +419,7 @@
 
 <section class="footer-section">
   <div class="foot-title">
-    <img class="foot-img" src="./B12A02-Responsive-Flowers/assets/logo.png" alt="">
+    <img class="foot-img" src="assets/logo.png" alt="">
     <p class="">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
   </div>
 
@@ -450,10 +450,10 @@
 
 
 <div class="foot-logo">
-   <img src="./B12A02-Responsive-Flowers/assets/icon-linkedin.png" alt="">
-  <img src="./B12A02-Responsive-Flowers/assets/icon-twitter.png" alt="">
- <img src="./B12A02-Responsive-Flowers/assets/icon-facebook.png" alt="">
-  <img src="./B12A02-Responsive-Flowers/assets/icon-youtube.png" alt="">
+   <img src="assets/icon-linkedin.png" alt="">
+  <img src="assets/icon-twitter.png" alt="">
+ <img src="assets/icon-facebook.png" alt="">
+  <img src="assets/icon-youtube.png" alt="">
 </div>
 
 
